cmake_minimum_required(VERSION 3.15)
project(test)

set(CMAKE_CXX_STANDARD 14)

add_executable(test
        leetcode/234_Palindrome_Linked_List.cpp)
#        CommonDocTest.cpp
#        main.cpp
#        main_test.cpp
#        MergeSort.cpp
#        ScorerTest.cpp
#        test_aync_use_promoise.cpp)
